# qt-mvvm

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  app_manager.cpp  app_manager.h  config.cpp  config.h  global.h  i_model.h  i_view.h  i_view_model.h  main.cpp  model.cpp  model.h  view.cpp  view.h  view_model.cpp  view_model.h  vm_helper.cpp  vm_helper.h
